--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -89,3 +89,17 @@
     font-size: 40px;
   }
 }
+@media (max-width: 390px) {
+  .home .home-img .img-box {
+    max-width: 180px;
+  }
+  .home .home-text h2 {
+    font-size: 40px;
+  }
+  .let {
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+}
